# hs-webtransport

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  flake.nix  hs-webtransport.cabal
interop/: echo_server.go  go.mod
src/Network/: WebTransport.hs
src/Network/WebTransport/: Client.hs  Error.hs  Server.hs  Stream.hs
src/Network/WebTransport/Internal/: ExtendedConnect.hs  H3Settings.hs  SessionStream.hs  VarInt.hs
test/: Main.hs
test/Network/WebTransport/: ClientSpec.hs  ConformanceSpec.hs  ExtendedConnectSpec.hs  H3SettingsSpec.hs  InteropSpec.hs  LoopbackSpec.hs  ServerSpec.hs  SessionStreamSpec.hs  VarIntSpec.hs
